--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -4,4 +4,13 @@
    display: flex;
    justify-content: center;
    align-items: center;
+   flex-direction: row;
+}
+
+.boggle-input-area {
+   margin-right: 100px;
+}
+
+.boggle-input {
+   margin-top: 100px;
 }
