--- a/src/components/GameMenu.css
+++ b/src/components/GameMenu.css
@@ -7,10 +7,16 @@
 }
 
 .game-tile {
-   border: 1px black solid;
    display: inline-block;
    text-align: center;
    padding: 50px 0;
    width: 175px;
    margin: 50px;   
+   color: black;
+   text-decoration: none;
+   background-color: #ffffff;
+   font-family: Baskerville, "Baskerville Old Face", "Goudy Old Style", Garamond, "Times New Roman", serif;
+   font-size: 23px;
+   /*none|h-shadow v-shadow blur spread color |inset|initial|inherit;*/
+   box-shadow: 1px 1px 12px #888888;
 }
