--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=Eczar');
+
 body {
    background-color: #79b3e6;
+   font-family: 'Eczar', serif;
 }
