--- a/src/components/App.css
+++ b/src/components/App.css
@@ -6,10 +6,24 @@ body {
 }
 
 .bf-button {
+   border: none;
    text-align: center;
-   color: black;
+   color: #2d3335;
    text-decoration: none;
    background-color: #ffffff;
    /*none|h-shadow v-shadow blur spread color |inset|initial|inherit;*/
    box-shadow: 1px 1px 12px #888888;
+   font: inherit;
+}
+
+.bf-input {
+   font-size: 18px;
+   font-family: 'Eczar', serif;
+   padding-top: 4px;
+   margin-left: 10px;
+}
+
+
+.bf-input:focus {   
+   outline: 0 none;
 }
