adding style for join room section

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -23,7 +23,14 @@ body {
    margin-left: 10px;
 }
 
-
 .bf-input:focus {   
    outline: 0 none;
+}
+
+.bf-input-container {
+   display: flex;
+   width: 50%;
+   justify-content: flex-end;
+   align-items: center;
+   margin-bottom: 30px;
 }
