--- a/src/components/App.css
+++ b/src/components/App.css
@@ -14,6 +14,7 @@ body {
    /*none|h-shadow v-shadow blur spread color |inset|initial|inherit;*/
    box-shadow: 1px 1px 12px #888888;
    font: inherit;
+   cursor: pointer;
 }
 
 .bf-input {
