--- a/src/components/App.css
+++ b/src/components/App.css
@@ -30,8 +30,7 @@ body {
 
 .bf-input-container {
    display: flex;
-   width: 50%;
-   justify-content: flex-end;
+   justify-content: center;
    align-items: center;
    margin-bottom: 30px;
 }
