moving styles import

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Eczar');
+@import url('https://fonts.googleapis.com/css?family=Russo+One');
 
 body {
    background-color: #79b3e6;
