fixing it so that the boggle board holds a place in the flow

--- a/src/components/Boggle.css
+++ b/src/components/Boggle.css
@@ -47,6 +47,11 @@
    margin: 0px auto;
 }
 
+.boggle-board-container {
+   width: 80%;
+   padding-bottom: 89%;
+}
+
 .time-remaining {
    margin-top: 34px;
    text-align: center;
