--- a/src/components/Boggle.css
+++ b/src/components/Boggle.css
@@ -1,5 +1,5 @@
-.boggle-input {
-   margin: 23px auto;
+.boggle-input.bf-input {
+   margin: 0 auto;
    display: block;
 }
 
@@ -50,6 +50,7 @@
 .boggle-board-container {
    width: 80%;
    padding-bottom: 89%;
+   margin-bottom: 50px;
 }
 
 .time-remaining {
@@ -76,3 +77,23 @@
    display: inline-block;
    padding: 0px 6px;
 }
+
+/*mobile*/
+@media (max-width: 500px) {
+}
+
+/*desktop*/
+@media (min-width: 500px) {
+   .boggle-board {
+      height: 300px;
+      width: 300px;
+      padding: 0;
+   }
+
+   .boggle-board-container {
+      width: 300px;
+      height: 300px;
+      padding: 0;
+   }
+}
+
