--- a/src/components/Results.css
+++ b/src/components/Results.css
@@ -24,11 +24,13 @@
 }
 
 .bf-button.boggle-play-again-button {
-   background-color: #cfe8ff;
-   color: #29363c;
+   background-color: #3889d0;
+   color: #ffffff;
    border-radius: 4px;
-   box-shadow: 0px 0px 3px #888888;
+   font-size: 21px;
+   box-shadow: 1px 1px 1px #888888;
    margin-bottom: 68px;
+   text-shadow: -0.5px 0 black, 0 0.5px black, 0.5px 0 black, 0 -0.5px black;
 }
 
 .boggle-player-name-header {
