android minimizing affect - round 1

--- a/src/components/Boggle.css
+++ b/src/components/Boggle.css
@@ -75,6 +75,8 @@
 	flex-direction: column;
 	flex-wrap: wrap;
 	align-content: flex-start;
+	max-width: 90%;
+	overflow: scroll;
 }
 
 .boggle-guess {
