--- a/src/components/Room.css
+++ b/src/components/Room.css
@@ -1,8 +1,7 @@
 
 .game-logo {
 	text-align: center;
-	margin-bottom: 50px;
-	font-size: 120px;
+	margin: 50px;
 	color: #ffba33;
 	font-family: 'Russo One', sans-serif;
 	text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
@@ -31,6 +30,7 @@
 	margin: 0 27px;
 	height: 42px;
 	width: 111px;
+	min-width: 111px;
 }
 
 a.game-config-button-horizontal {
@@ -39,4 +39,18 @@ a.game-config-button-horizontal {
 
 .host-config-section .bf-input-container {
 	margin-bottom: 40px;
+}
+
+/*mobile*/
+@media (max-width: 500px) {
+	.game-logo {
+		font-size: 22vw;
+	}
+}
+
+/*desktop*/
+@media (min-width: 500px) {
+	.game-logo {
+		font-size: 120px;
+	}
 }
