--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,3 +1,4 @@
+/* I also import these in index.js - TODO: make one place for all css imports; */
 @import url('https://fonts.googleapis.com/css?family=Eczar');
 @import url('https://fonts.googleapis.com/css?family=Russo+One');
 
