--- a/src/components/ConnectFour.css
+++ b/src/components/ConnectFour.css
@@ -3,3 +3,9 @@
    width: 300px;
    background-color: red;
 }
+
+.connect-four-disc {
+   border-radius: 100%;
+   width: 30px;
+   height: 30px;
+}
