--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,10 +1,17 @@
-/* I also import these in index.js - TODO: make one place for all css imports; */
-@import url('https://fonts.googleapis.com/css?family=Eczar');
-@import url('https://fonts.googleapis.com/css?family=Russo+One');
+/* I also import these in index.js - TODO: make one place for all css imports; 
+	dist/index.html
+*/
+@import url('https://fonts.googleapis.com/css?family=Bilbo|Bilbo+Swash+Caps|Clicker+Script|Dawning+of+a+New+Day|Fredericka+the+Great|La+Belle+Aurore|Qwigley');
 
 body {
-	background-color: #79b3e6;
-	font-family: 'Eczar', serif;
+	background-color: #fbfbfb;
+	font-family: 'Fredericka the Great', cursive;
+	font-family: 'La Belle Aurore', cursive;
+	font-family: 'Clicker Script', cursive;
+	font-family: 'Qwigley', cursive;
+	font-family: 'Bilbo Swash Caps', cursive;
+	font-family: 'Dawning of a New Day', cursive;
+	font-family: 'Bilbo', cursive;
 }
 
 .bf-button {
@@ -14,7 +21,7 @@ body {
 	text-decoration: none;
 	background-color: #ffffff;
 	/*none|h-shadow v-shadow blur spread color |inset|initial|inherit;*/
-	box-shadow: 1px 1px 12px #888888;
+	/*box-shadow: 1px 1px 12px #888888;*/
 	font: inherit;
 	cursor: pointer;
 }
