--- a/src/components/CodeNames.css
+++ b/src/components/CodeNames.css
@@ -1,3 +1,12 @@
 .code-names .grid-container {
    margin-bottom: 100px;
 }
+
+.code-names .cell-contents {
+   flex-direction: column;
+   justify-content: center;
+   height: 100%;
+   width: 100%;
+   cursor: pointer;
+   display: flex;
+}
